# ci-cd-lab-v2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  secrets.txt
.github/workflows/: ci.yml  release.yml
hooks/: commit-msg  post-merge  pre-commit  pre-push
scripts/: install_hook.sh  tools.sh
test_files/: README.md  bad.txt  bad.yaml  bad5s  bad_style.py  no_eof.txt  secrets.txt
tests/: test_calculate.py
